# natural-reward-seeking

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
configs/: agentic_misalignment_eval.toml  initial_prompt_eval.toml  rl_dapo_poc.toml  rl_experiment.template.toml  skill_gap_eval.toml
docs/: agentic_misalignment_eval.md  initial_prompt_eval.md  rl_dapo_poc.md  rl_training_scaffold.md  skill_gap_eval.md
notebooks/: model_smoke_test.ipynb
notebooks/.ipynb_checkpoints/: model_smoke_test-checkpoint.ipynb
results/initial_prompt_eval/: keyword_counts_by_category.csv  keyword_counts_overall.csv  rerun_unfinished_rows_after.jsonl  rerun_unfinished_rows_before.jsonl  responses.csv  responses.jsonl  responses_pre_reward.csv  responses_pre_reward.jsonl  run_config.json  sample_manifest.csv  sample_manifest.json  summary_by_category.csv  summary_overall.csv  target_completion_inputs.csv  target_completion_inputs.jsonl  target_completion_scores.csv
runs/: run_agentic_misalignment_eval.sh  run_initial_prompt_eval.sh  run_initial_prompt_eval_smoke.sh  run_rl_checkpoint_eval.sh  run_rl_dapo_train.sh  run_rl_prepare_dataset.sh  run_skill_gap_eval.sh
runs/.ipynb_checkpoints/: run_initial_prompt_eval-checkpoint.sh
scripts/: prepare_rl_poc_dataset.py  rerun_unfinished_responses.py  run_agentic_misalignment_eval.py  run_initial_prompt_eval.py  run_rl_checkpoint_eval.py  run_rl_dapo_train.py  run_skill_gap_eval.py
tests/: test_agentic_misalignment.py  test_keywords.py  test_parsing.py  test_sampling.py
(+63 files in other folders)
