[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "natural-reward-seeking"
version = "0.1.0"
description = "Research tooling for situational-awareness and reward-reasoning experiments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.10",
  "accelerate>=1.0",
  "anthropic>=0.49",
  "beautifulsoup4>=4.12",
  "datasets>=3.0",
  "hydra-core>=1.3",
  "lxml>=4.9",
  "matplotlib>=3.8",
  "pandas>=2.2",
  "python-dotenv>=1.0",
  "PyYAML>=6.0",
  "ray>=2.40",
  "torch>=2.4",
  "transformers>=4.53",
  "vllm>=0.8; platform_system == 'Linux'",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
